<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VMS</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="create_mechanic_s_account">Create Mechanic\'s account</string>
    <string name="already_have_account_login">Already Have Account? Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="password5">Password</string>
    <string name="email4">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password3">Password</string>
    <string name="login3">Login</string>
    <string name="don_t_have_an_account_register3">Don\'t have an account? Register</string>
    <string name="email5">Email</string>
    <string name="password2">Password</string>
    <string name="login5">Login</string>
    <string name="don_t_have_an_account_registeri">Don\'t have an account? Register</string>
    <string name="full_name2">Full Name</string>
    <string name="phone_number3">Phone Number</string>
    <string name="email9">Email</string>
    <string name="password6">Password</string>
    <string name="register8">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="user">USER</string>
    <string name="mechanic">MECHANIC</string>
    <string name="welcome_to_vms_app_click_to_login_as_a_mechanic_or_user">Welcome To VMS app. Click To Login as a Mechanic or User</string>
    <string name="find_user_s_location">Find Mechanic\'s Location</string>
    <string name="email_address5">Email Address</string>
    <string name="password7">Password</string>
    <string name="loginm">Login</string>
    <string name="don_t_have_an_account_registerr">Don\'t have an account? Register</string>
    <string name="text">text</string>
    <string name="notification">Reminder</string>
    <string name="rating">Rating</string>
    <string name="brands">Brands</string>
    <string name="rate">Rate</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>


    <string name="Profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="profile2">Profile</string>
    <string name="profile3">Profile</string>
    <string name="log_out">Log out</string>
    <string name="Parts">parts</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="kithinji">kithinji</string>
    <string name="victor">victor</string>
    <string name="addToCart">Add To Cart</string>
    <string name="clutch">Clutch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_200">200</string>
    <string name="task">Reminders</string>
    <string name="create_tasks">Set Reminder</string>
    <string name="title">title</string>
    <string name="data">data</string>
    <string name="timer">hour</string>
    <string name="cancel">Cancel</string>
    <string name="new_task">New Reminder</string>
    <string name="to_edit">To edit</string>
    <string name="delete">Delete</string>
    <string name="empty_text">Oops! You do not have any reminder for today</string>
    <string name="auto_parts">Auto Parts</string>
    <string name="car_accessories">Car Accessories</string>
    <string name="auto_engine">Auto Engine</string>
    <string name="electrical_system">Electrical System</string>
    <string name="tire_accessories">Tire Accessories</string>
    <string name="title_activity_bmw_auto_engine">BmwAutoEngine</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="volkswagen_door_kes_24_530">Volkswagen door KES 24,530</string>
    <string name="volkswagen_fog_lights_kes_76_200">Volkwagen fogLights KES 76,200</string>
    <string name="volkswagen_sensors_kes_8_765">volksagen sensors Kes 8,765</string>
    <string name="Volkswagen_air_cleaner_kes_38_000">Volkswagen air cleaner Kes 38,000</string>
    <string name="toyota_piston_kes_4_805">toyota_piston kes 4,805</string>
    <string name="toyota_piston">toyota_piston</string>
    <string name="toyota_side_mirrors_kes_49_000">toyota side mirrors kes 49,000</string>
    <string name="toyota_toolkit_kes_97_000">toyota toolkit kes 97,000</string>
    <string name="toyota_lamps_kes_68_967">toyota lamps kes 68,967</string>
    <string name="toyota_gasket_kes_5_683">toyota gasket kes 5,683</string>
    <string name="toyota_air_filter_kes_29_875">toyota air filter kes 29,875</string>
    <string name="toyota_alternators_kes_47_000">toyota alternators kes 47,000</string>
    <string name="bmw_alternators_kes_47_000">bmw_alternators_kes_47_000</string>
    <string name="bmw_alternators_ke_47_000">bmw alternators kes 47,000</string>
    <string name="bmw_air_cleaners_kes_29_875">bmw air cleaners kes 29,875</string>
    <string name="bmw_bonnet_hood_kit_kes_97_000">bmw bonnet hood kit kes 97,000</string>
    <string name="bmw_engine_kes_368_967">bmw engine kes 368,967</string>
    <string name="bmw_bonnet_hood_kes_59_875">bmw bonnet hood kes 59,875</string>
    <string name="bmw_air_cleaners_kes_25_683">bmw air cleaners kes 25,683</string>
    <string name="bmw_alternators_kes_68_967">bmw alternators kes 68,967</string>
    <string name="bmw_headlights_kes_97_000">bmw headlights kes 97,000</string>
    <string name="bmw_sensors_kes_49_000">bmw sensors kes 49,000</string>
    <string name="bmw_starter_kes_24_805">bmw starter kes 24,805</string>
    <string name="subaru_air_cleaner_kes_68_967">subaru air cleaner kes 68 967</string>
    <string name="subaru_brake_pads_kes_59_875">subaru brake pads kes 59,875</string>
    <string name="subaru_oil_filter_kes_25_683">subaru oil filter kes 25,683</string>
    <string name="subaru_plugs_kes_5_785">subaru plugs kes 5,785</string>
    <string name="subaru_tail_light_kes_9000">subaru tail light kes 9000</string>
    <string name="suzuki_condesor_kes_68_967">suzuki condesor kes 68,967</string>
    <string name="suzuki_catalytic_converter_kes_59_875">suzuki catalytic converter kes 59,875</string>
    <string name="suzuki_alternators_kes_25_683">suzuki alternators kes 25,683</string>
    <string name="peugeot_bonnet_hood_kes_68_967">peugeot bonnet hood kes 68,967</string>
    <string name="peugeot_condensor_kes_57_865">peugeot condensor kes 57,865</string>
    <string name="peugeot_oil_filter_kes_25_683">peugeot oil filter kes 25,683</string>
    <string name="peugeot_fuel_injectors_kes_46_977">peugeot fuel injectors kes 46,977</string>
    <string name="peugeot_fenders_kes_36_000">peugeot fenders kes 36,000</string>
    <string name="nissan_control_arm_kes_9_999">nissan control arm kes 9,999</string>
    <string name="nissan_headlight_kes_57_865">nissan headlight kes 57,865</string>
    <string name="nissan_plug_kes_7_698">nissan plug kes 7,698</string>
    <string name="nissan_tie_rod_kes_36_000">nissan Tie Rod kes 36,000</string>
    <string name="mitsubishi_speedometer_kes_22_005">mitsubishi Speedometer kes 22,005</string>
    <string name="mitsubishi_shaft_kes_7_000">mitsubishi Shaft kes 7,000</string>
    <string name="mitsubishi_radiator_kes_34_000">mitsubishi Radiator kes 34,000</string>
    <string name="mitsubishi_ignition_coil_kes_4_000">mitsubishi Ignition Coil kes 4,000</string>
    <string name="mitsubishi_blower_motor_kes_68_967">mitsubishi Blower Motor kes 68,967</string>
    <string name="mazda_air_filter_kes_33_000">mazda air filter kes 33,000</string>
    <string name="mazda_sensors_kes_4_300">mazda Sensors kes 4,300</string>
    <string name="isuzu_fenders_kes_20_200">isuzu Fenders kes 20,200</string>
    <string name="isuzu_compressor_kes_36_000">isuzu Compressor kes 36,000</string>
    <string name="isuzu_shift_kes_36_000">isuzu Shift kes 36,000</string>
    <string name="isuzu_wheel_kes_23_870">isuzu wheel kes 23,870</string>
    <string name="honda_stability_link_kes_37_890">honda Stability Link kes 37,890</string>
    <string name="honda_spark_plugs_kes_3_000">honda spark Plugs kes 3,000</string>
    <string name="honda_door_motor_kes_70_000">honda Door Motor kes 70,000</string>
    <string name="ford_condensor_kes_36_000">ford Condensor kes 36,000</string>
    <string name="ford_fan_shroud_kes_8_600">ford Fan Shroud kes 8,600</string>
    <string name="ford_front_door_kes_38_375">ford Front Door kes 38,375</string>
    <string name="ford_spare_tank_kes_28_600">ford spare tank kes 28,600</string>
    <string name="benz_oil_filter_kes_76_800">benz Oil Filter kes 76,800</string>
    <string name="benz_sensors_kes_56_780">benz Sensors kes 56,780</string>
    <string name="benz_wiper_motor_kes_92_000">benz Wiper Motor kes 92,000</string>
    <string name="benz_wipers_kes_22_000">benz Wipers kes 22,000</string>
    <string name="audi_filter_kes_26_000">audi Filter kes 26,000</string>
    <string name="audi_clutch_kes_78_900">audi clutch kes 78,900</string>
    <string name="audi_headlight_kes_76_000">audi Headlight kes 76,000</string>
    <string name="audi_radiator_kes_54_920">audi Radiator kes 54,920</string>
    <string name="audisparks_kes_22_000">audiSparks kes 22,000</string>
    <string name="audi_sparks_kes_22_000">audi sparks kes 22,000</string>
    <string name="Dashboard">Dashboard</string>
    <string name="enter_email_username_to_reset_your_password">Enter Email/Username to reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="email2">Email</string>
    <string name="click_rate">Click rate!</string>
    <string name="checkout">CheckOut</string>
    <string name="clutch5">Clutch</string>
    <string name="h200">200</string>
</resources>