<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/profile2">
        <menu>
            <item
                android:id="@+id/login"
                android:title="@string/profile3"
                android:icon="@drawable/ic_profile" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/profile"-->
<!--            android:icon="@drawable/ic_profile"-->
<!--            android:title="@string/profile" />-->

        <item
            android:id="@+id/notification"
            android:icon="@drawable/ic_baseline_notifications"
            android:title="@string/notification" />

        <item
            android:id="@+id/brands"
            android:icon="@drawable/ic_car_brands"
            android:title="@string/brands"/>

    </group>



    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"
                />
            <item
                android:id="@+id/rate"
                android:title="@string/rate"
                android:icon="@drawable/ic_baseline_star_rate_24"
                />
            <item
                android:id="@+id/logout"
                android:title="@string/log_out"
                android:icon="@drawable/ic_logout">

            </item>

        </menu>
    </item>

</menu>